--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.16.1",
     "react": "^18.3.1",
